welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: ';' expected but 'return' found.
  }return die1+die2} 
   ^